--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,7 +1,7 @@
 .home-container {
   display: flex;
   width: 100vw;
-  height: 91vh;
+  height: 92vh;
 }
 
 .side-menu-container {
